# cupertino-nvr

./: .gitignore  ARCHITECTURE_4+1.md  CHANGELOG.md  CHANGELOG_MQTT_CONTROL.md  CLAUDE.md  DEBUGGING_SESSION_SUMMARY.md  DEVELOPER_GUIDE.md  DYNAMIC_MODEL_FIX.md  DYNAMIC_ORCHESTRATION_SUMMARY.md  GO2RTC_PATTERN_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  METRICS_IMPLEMENTATION_SUMMARY.md  MQTT_CONTROL.md  Makefile  PAUSE_BUG_HYPOTHESIS.md  PAUSE_FIX_SUMMARY.md  PAUSE_RESUME_WORKAROUND.md  QUICK_START.md  QUICK_WINS_V2_MASTER.md  QUICK_WIN_FASE_1_TEMPLATE_METHOD.md  README.md  STRUCTURED_LOGGING.md  STRUCTURED_LOGGING_FIX_SUMMARY.md  TESTING_CONTROL_PLANE.md  TEST_PIPELINE_START.md  TROUBLESHOOTING_LOCKEO.md  __init__.py  debug_control_plane.sh  github_issue_quick_wins_v2.md  go2rtc.yaml.example  pyproject.toml  setup.py  test_design_suite.py  test_dynamic_config.sh  test_metrics.sh  test_pause_issue.md  test_restart_command.sh
backlog/: README.md
backlog/bugs/: pause-resume-instability.md
backlog/features/: multi-node-orchestration.md  web-dashboard.md
backlog/research/: adaptive-roi-detection.md
backlog/technical-debt/: event-persistence.md
config/go2rtc/: README.md  go2rtc.yaml
cupertino_nvr/: __init__.py  cli.py  interfaces.py  logging_utils.py
cupertino_nvr/events/: __init__.py  protocol.py  schema.py
cupertino_nvr/processor/: __init__.py  command_handlers.py  config.py  control_plane.py  metrics_reporter.py  mqtt_sink.py  pipeline_manager.py  processor.py  validators.py
cupertino_nvr/wall/: __init__.py  config.py  detection_cache.py  mqtt_listener.py  renderer.py  wall.py
docs/: BLUEPRINT_INFERENCE_PIPELINE_CONTROL.md  DISCOVERY_HEARTBEAT_PATTERN.md
docs/nvr/: DESIGN_CONSULTANCY_REFACTORING.md  DESIGN_NVR_MULTIPLEXER.md  GO2RTC_PROXY_ARCHITECTURE.md  INFORME_CONSULTIVO_ARQUITECTURA.md  IOT_COMMAND_PATTERN.md  MANIFESTO_TEST_DESIGN - Blues Style.md  NVR_ARCHITECTURE_DIAGRAM.md  NVR_EXECUTIVE_SUMMARY.md  NVR_IMPLEMENTATION_CHECKLIST.md  NVR_INDEX.md  NVR_PACKAGE_STRUCTURE.md  NVR_QUICK_START.md  NVR_README.md  QUICKWIN_INSTANCE_IDENTIFICATION.md  QUICKWIN_SUPERVISION_INTEGRATION.md  QUICK_REFERENCE_CONTROL_PLANE.md  WATCHDOG_EXPLAINED.md
docs/references/inference/: Overview.md
docs/references/inference/2 Core Architecture/: 2.1 HTTP API server.md  2.2 Model Manager and Registry.md  2.3 Caching and Persistence.md
docs/references/inference/3 Workflow System/: 3 Workflow System.md  3.2 Workflow Execution.md
docs/references/inference/4 Stream Processing/: 4 Stream Processing.md  4.1 Interface Pipeline.md  4.2 Video Sources and Multiplexing.md  4.3 Stream Manager.md  4.4 WebRTC Integration.md
docs/references/inference/7 Model Ecosystem/: 7.1  Fine-Tuned Models.md  7.3 OwlV2 Few-Shot Detection.md
docs/references/supervision/: 1. Overview.md
docs/references/ultralitycs/: basesolution-architecture.md  solution-applications.md  solutions-framework.md
examples/: mqtt_control_test.py
referencias/adeline/: CLAUDE.md
referencias/adeline/app/: controller.py
referencias/adeline/config/: schemas.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_architectural_design.py  test_cache.py  test_design_validation.py  test_events.py  test_mqtt_sink.py  test_mqtt_sink_with_fakes.py  test_supervision_integration.py  test_validators.py
(+41 files in other folders)
